# proyecto-rust

./: Cargo.toml  README.md  db.sqlite
migrations/: 202509140001_create_users.sql
public/: index.html
src/: main.rs
src/handlers/: user.rs
src/models/: user.rs
src/routes/: health.rs  mod.rs  root.rs  users.rs
tests/: user_routes.rs
